Fixed spacing for news list view (WWW-1466)

--- a/Resources/Private/Sass/Sections/_news.scss
+++ b/Resources/Private/Sass/Sections/_news.scss
@@ -13,4 +13,11 @@
 			margin: 4px 0;
 		}
 	}
+	.news-list-view {
+		.teaser-text {
+			p {
+				margin-bottom: 0;
+			}
+		}
+	}
 }
